--- a/src/pages/Formacion/Formacion.css
+++ b/src/pages/Formacion/Formacion.css
@@ -5,6 +5,7 @@
   gap: var(--pf-gap-grid);
   /* justify-content: center; */
   padding-bottom: 10px;
+  grid-auto-flow: dense;
 }
 
 /* Definimos las propiedades para crear un template basado en grid que se adapte al contenido dado */
